--- a/static/index.html
+++ b/static/index.html
@@ -11,7 +11,7 @@
 
   gtag('config', 'G-VHVNHMYGN3');
 </script>
-      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta name="St4rDust" content="width=device-width, initial-scale=1">
       <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
       <link rel="stylesheet" href="index.css">
       <script type="text/javascript" src="//counter.websiteout.net/js/7/10/5/0"></script>
